Update done Real-time socket
Da ket noi va trien khai thanh cong socket. Client va Server da hoat dong real-time

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@
 log4j.rootLogger = DEBUG, stdout, debugFile, infoFile, warnFile
 #log4j.rootLogger=stdout, file, debugFile, infoFile, warnFile, errorFile
 
-log = ${java.io.tmpdir}/log_ToolTaxCode
+log = ${jboss.server.log.dir}/log_ToolTaxCode
 day = %d{dd-MM-yyyy}
 
 # Redirect log messages to console
