--- a/pom.xml
+++ b/pom.xml
@@ -43,17 +43,21 @@
         <artifactId>jackson-core</artifactId>
         <version>2.8.4</version>
     </dependency>
+
       <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>1.6.4</version>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>7.0</version>
+          <scope>provided</scope>
       </dependency>
 
       <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-          <version>1.6.4</version>
+          <groupId>org.java-websocket</groupId>
+          <artifactId>Java-WebSocket</artifactId>
+          <version>1.5.2</version>
       </dependency>
+
+
   </dependencies>
 
   <build>
